Upgrade eslint-config and introduce react effect linting
Updated `@ethang/eslint-config` to version 22.1.0 across multiple packages, resolving potential issues and integrating new features. Added `eslint-plugin-react-you-might-not-need-an-effect` for React projects to encourage optimized use of effects.

--- a/apps/ethang-astro/wrangler.jsonc
+++ b/apps/ethang-astro/wrangler.jsonc
@@ -5,7 +5,9 @@
     "directory": "./dist"
   },
   "compatibility_date": "2025-05-14",
-  "compatibility_flags": ["nodejs_compat"],
+  "compatibility_flags": [
+    "nodejs_compat"
+  ],
   "main": "./dist/_worker.js/index.js",
   "name": "ethang-astro",
   "observability": {
