--- a/apps/utility/package.json
+++ b/apps/utility/package.json
@@ -9,7 +9,7 @@
     "remeda": "^2.21.5"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.0.1",
+    "@ethang/eslint-config": "^22.1.0",
     "@types/lodash": "^4.17.16",
     "@vitest/ui": "^3.1.3",
     "eslint": "^9.26.0",
@@ -26,7 +26,7 @@
     "build": "vitest run",
     "deploy": "wrangler deploy",
     "dev": "vitest",
-    "lint": "eslint . --fix",
+    "lint": "eslint ./tests --fix",
     "start": "vitest run"
   },
   "type": "module",
