--- a/apps/ethang-astro/wrangler.jsonc
+++ b/apps/ethang-astro/wrangler.jsonc
@@ -5,9 +5,7 @@
     "directory": "./dist"
   },
   "compatibility_date": "2025-05-14",
-  "compatibility_flags": [
-    "nodejs_compat"
-  ],
+  "compatibility_flags": ["nodejs_compat"],
   "main": "./dist/_worker.js/index.js",
   "name": "ethang-astro",
   "observability": {
