Remove obsolete bump script and update dependencies and rules
Deleted the legacy `bump.ps1` script and added `@heroui/shared-utils` to package manager dependencies. Updated eslint rules to include `css/no-important` and upgraded `@eslint/css` to version 0.8.0. Additionally, improved token handling logic and configuration for Wrangler secrets.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/auth/wrangler.jsonc
+++ b/apps/auth/wrangler.jsonc
@@ -15,5 +15,12 @@
   },
   "placement": {
     "mode": "smart"
-  }
+  },
+  "secrets_store_secrets": [
+    {
+      "binding": "auth-token",
+      "store_id": "737fce8854f042e4905cb36a696dd3c2",
+      "secret_name": "auth-token"
+    }
+  ]
 }
