--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -9,12 +9,15 @@
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
+    "@tanstack/query-async-storage-persister": "^5.76.1",
     "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "@tanstack/react-query-persist-client": "^5.76.1",
     "@tanstack/react-router": "^1.120.4",
     "@tanstack/react-router-devtools": "^1.120.4",
     "framer-motion": "^12.12.1",
+    "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
@@ -37,6 +40,7 @@
     "eslint": "^9.27.0",
     "jiti": "^2.4.2",
     "postcss": "^8.5.3",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
@@ -49,7 +53,7 @@
   "name": "dashboard",
   "private": true,
   "scripts": {
-    "build": "tsc -b && vite build",
+    "build": "rimraf dist && tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
