--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,6 +4,7 @@
     "maintained node versions"
   ],
   "dependencies": {
+    "@clerk/backend": "^1.32.2",
     "@clerk/clerk-react": "^5.31.4",
     "@ethang/schemas": "workspace:*",
     "@ethang/toolbelt": "^4.4.1",
