--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -29,7 +29,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.2",
     "@eslint/js": "^9.25.0",
-    "@ethang/eslint-config": "^22.1.4",
+    "@ethang/eslint-config": "^22.2.2",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.4",
@@ -42,7 +42,7 @@
     "jiti": "^2.4.2",
     "postcss": "^8.5.3",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
