--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -7,12 +7,15 @@
     "@astrojs/cloudflare": "^12.5.3",
     "astro": "^5.7.13",
     "highlight.js": "^11.11.1",
-    "luxon": "^3.6.1"
+    "lodash": "^4.17.21",
+    "luxon": "^3.6.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@ethang/eslint-config": "^22.2.2",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
     "daisyui": "^5.0.35",
     "eslint": "^9.25.1",
