--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^22.2.2",
+    "@ethang/eslint-config": "^22.2.3",
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "typescript-eslint": "^8.31.0"
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@clerk/shared",
       "@heroui/shared-utils",
       "@parcel/watcher",
       "@prisma/client",
