--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,6 +10,8 @@
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
+    "@prisma/adapter-d1": "^6.8.2",
+    "@prisma/client": "6.8.2",
     "@tanstack/query-async-storage-persister": "^5.76.1",
     "@tanstack/react-form": "^1.11.3",
     "@tanstack/react-query": "^5.76.1",
@@ -21,6 +23,7 @@
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "prisma": "^6.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "uuid": "^11.1.0",
@@ -38,6 +41,7 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "eslint": "^9.27.0",
     "jiti": "^2.4.2",
     "postcss": "^8.5.3",
