--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -7,6 +7,7 @@
     "@clerk/backend": "^1.32.2",
     "@clerk/clerk-react": "^5.31.4",
     "@ethang/schemas": "workspace:*",
+    "@ethang/store": "^1.3.0",
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
@@ -21,11 +22,13 @@
     "@tanstack/react-router-devtools": "^1.120.10",
     "framer-motion": "^12.12.1",
     "idb-keyval": "^6.2.2",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "prisma": "^6.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
   },
@@ -39,6 +42,7 @@
     "@types/lodash": "^4.17.16",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.2",
+    "@types/use-sync-external-store": "^1.5.0",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
