Add job application management and improve bookmark handling
Implemented full CRUD functionality for job applications, including schema definitions, API routes, and UI components. Introduced enhancements to bookmarks by refactoring schemas and standardizing modal components. Updated dependencies and adjusted database schema for better flexibility.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -25,9 +25,11 @@
     "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
+    "luxon": "^3.6.1",
     "prisma": "^6.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^2.6.0",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
@@ -40,6 +42,7 @@
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.10",
     "@types/lodash": "^4.17.16",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.2",
     "@types/use-sync-external-store": "^1.5.0",
