--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -9,6 +9,7 @@
     "highlight.js": "^11.11.1",
     "lodash": "^4.17.21",
     "luxon": "^3.6.1",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
