--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -29,7 +29,7 @@
     "prisma": "^6.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "<3",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.4",
     "@eslint/js": "^9.25.0",
-    "@ethang/eslint-config": "^22.2.5",
+    "@ethang/eslint-config": "^22.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.10",
