--- a/apps/utility/package.json
+++ b/apps/utility/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@ethang/eslint-config": "^22.3.0",
     "@types/lodash": "^4.17.16",
-    "@vitest/ui": "^3.1.3",
+    "@vitest/ui": "^3.1.4",
     "eslint": "^9.26.0",
     "typescript-eslint": "^8.32.1",
     "vitest": "^3.1.3",
@@ -26,7 +26,7 @@
     "deploy": "wrangler deploy",
     "dev": "vitest",
     "lint": "eslint ./tests --fix",
-    "start": "vitest run"
+    "build": "vitest run"
   },
   "type": "module",
   "version": "0.0.0"
