--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -43,7 +43,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.3.2",
+    "@ethang/eslint-config": "^22.4.0",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.29.0",
     "@tailwindcss/typography": "^0.5.16",
@@ -65,6 +65,9 @@
     "typescript-eslint": "^8.31.0",
     "vite": "^6.3.4",
     "vite-plugin-pwa": "^1.0.0"
+  },
+  "engines": {
+    "node": ">=22"
   },
   "name": "sterett-react",
   "private": true,
