--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@clerk/backend": "^1.32.2",
     "@clerk/clerk-react": "^5.31.4",
+    "@ethang/hooks": "^2.3.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^1.3.0",
     "@ethang/toolbelt": "^4.4.1",
