--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^12.12.1",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.1",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "luxon": "^3.6.1",
