--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -12,6 +12,7 @@
     "@ethang/toolbelt": "^4.4.1",
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
+    "@internationalized/date": "^3.8.1",
     "@tanstack/query-async-storage-persister": "^5.77.0",
     "@tanstack/react-form": "^1.11.3",
     "@tanstack/react-query": "^5.77.0",
