--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "luxon": "^3.6.1",
+    "ms": "^2.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "<3",
@@ -43,6 +44,7 @@
     "@tanstack/router-plugin": "^1.120.10",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
+    "@types/ms": "^2.1.0",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.2",
     "@types/use-sync-external-store": "^1.5.0",
