--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -13,6 +13,8 @@
     "@heroui/react": "2.7.8",
     "@heroui/theme": "2.4.15",
     "@internationalized/date": "^3.8.1",
+    "@prisma/adapter-d1": "^6.8.2",
+    "@prisma/client": "^6.8.2",
     "@tanstack/query-async-storage-persister": "^5.77.0",
     "@tanstack/react-form": "^1.11.3",
     "@tanstack/react-query": "^5.77.0",
@@ -54,6 +56,7 @@
     "eslint": "^9.27.0",
     "jiti": "^2.4.2",
     "postcss": "^8.5.3",
+    "prisma": "^6.8.2",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
