--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -62,6 +62,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.0",
     "wrangler": "^4.16.1"
   },
   "engines": {
