--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query-persist-client": "^5.77.0",
     "@tanstack/react-router": "^1.120.12",
     "@tanstack/react-router-devtools": "^1.120.12",
+    "@uidotdev/usehooks": "^2.4.1",
     "framer-motion": "^12.12.1",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.1",
@@ -33,6 +34,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "<3",
+    "use-debounce": "^10.0.4",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
     "zod": "^3.24.4"
