--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -46,6 +46,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.12",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
     "@types/ms": "^2.1.0",
