Update `@ethang/eslint-config` to v22.6.1 and bump additional dependencies in `pnpm-lock.yaml`
Signed-off-by: ethang <hello@ethang.email>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^22.6.0",
+    "@ethang/eslint-config": "^22.6.1",
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "typescript-eslint": "^8.31.0"
@@ -14,6 +14,7 @@
       "@clerk/shared",
       "@heroui/shared-utils",
       "@parcel/watcher",
+      "@prisma/client",
       "@swc/core",
       "better-sqlite3",
       "esbuild",
