--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -37,6 +37,7 @@
     "luxon": "^3.6.1",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.2",
     "react-dom": "^19.1.0",
     "sanity-image": "^1.0.0",
     "tailwind-merge": "<3",
@@ -53,6 +54,7 @@
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.6",
+    "@types/react-big-calendar": "^1.16.2",
     "@types/react-dom": "^19.1.4",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
