--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@clerk/backend": "^1.32.2",
     "@clerk/clerk-react": "^5.31.4",
+    "@cortex-js/compute-engine": "^0.29.1",
     "@ethang/hooks": "^2.3.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^1.3.0",
@@ -33,6 +34,7 @@
     "ms": "^2.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "<3",
     "use-debounce": "^10.0.4",
     "use-sync-external-store": "^1.5.0",
