--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -44,7 +44,10 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.2.4",
     "@eslint/js": "^9.25.0",
-    "@ethang/eslint-config": "^22.6.3",
+    "@ethang/eslint-config": "^22.6.4",
+    "@storybook/addon-docs": "9.0.3",
+    "@storybook/addon-vitest": "9.0.3",
+    "@storybook/react-vite": "9.0.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.12",
@@ -56,13 +59,18 @@
     "@types/react-dom": "^19.1.2",
     "@types/use-sync-external-store": "^1.5.0",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "3.1.4",
+    "@vitest/coverage-v8": "3.1.4",
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "eslint": "^9.27.0",
+    "eslint-plugin-storybook": "9.0.3",
     "jiti": "^2.4.2",
+    "playwright": "^1.52.0",
     "postcss": "^8.5.3",
     "prisma": "^6.8.2",
     "rimraf": "^6.0.1",
+    "storybook": "9.0.3",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1",
@@ -78,11 +86,13 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist && tsc -b && vite build",
+    "build-storybook": "storybook build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint src --fix && eslint worker --fix",
     "preview": "pnpm run build && vite preview",
+    "storybook": "storybook dev -p 6006",
     "test": "vitest run"
   },
   "type": "module",
