--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -10,17 +10,17 @@
     "@ethang/hooks": "^2.3.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^1.3.0",
-    "@ethang/toolbelt": "^4.4.9",
+    "@ethang/toolbelt": "^4.4.10",
     "@heroui/react": "2.7.9",
     "@heroui/theme": "2.4.16",
     "@internationalized/date": "^3.8.1",
-    "@prisma/adapter-d1": "^6.8.2",
-    "@prisma/client": "^6.8.2",
+    "@prisma/adapter-d1": "^6.9.0",
+    "@prisma/client": "^6.9.0",
     "@tanstack/query-async-storage-persister": "^5.80.2",
-    "@tanstack/react-form": "^1.11.3",
-    "@tanstack/react-query": "^5.80.2",
-    "@tanstack/react-query-devtools": "^5.80.2",
-    "@tanstack/react-query-persist-client": "^5.80.2",
+    "@tanstack/react-form": "^1.12.1",
+    "@tanstack/react-query": "^5.80.3",
+    "@tanstack/react-query-devtools": "^5.80.3",
+    "@tanstack/react-query-persist-client": "^5.80.3",
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
     "@uidotdev/usehooks": "^2.4.1",
@@ -29,7 +29,7 @@
     "immer": "^10.1.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.513.0",
     "luxon": "^3.6.1",
     "ms": "^2.1.3",
     "react": "^19.1.0",
@@ -39,12 +39,12 @@
     "use-debounce": "^10.0.4",
     "use-sync-external-store": "^1.5.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.49"
+    "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@cloudflare/vite-plugin": "^1.4.0",
+    "@cloudflare/vite-plugin": "^1.5.0",
     "@eslint/js": "^9.25.0",
-    "@ethang/eslint-config": "^22.8.0",
+    "@ethang/eslint-config": "^22.8.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.74.7",
     "@tanstack/router-plugin": "^1.120.15",
@@ -61,15 +61,15 @@
     "eslint": "^9.27.0",
     "jiti": "^2.4.2",
     "postcss": "^8.5.3",
-    "prisma": "^6.8.2",
+    "prisma": "^6.9.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.33.1",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0",
-    "vitest": "^3.2.0",
-    "wrangler": "^4.19.0"
+    "vitest": "^3.2.1",
+    "wrangler": "^4.19.1"
   },
   "engines": {
     "node": ">=22"
@@ -83,6 +83,7 @@
     "dev": "vite",
     "lint": "eslint src --fix && eslint worker --fix",
     "preview": "pnpm run build && vite preview",
+    "prisma-gen": "prisma generate",
     "test": "vitest run"
   },
   "type": "module",
