--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -1,7 +1,7 @@
 {
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline",
+    "current node"
   ],
   "dependencies": {
     "@ethang/schemas": "workspace:^",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.8.36",
     "@ethang/eslint-config": "^22.8.1",
+    "browserslist-config-baseline": "^0.4.0",
     "@types/lodash": "^4.17.16",
     "eslint": "^9.25.1",
     "typescript": "^5.8.3",
