--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,7 +1,7 @@
 {
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline",
+    "current node"
   ],
   "dependencies": {
     "@clerk/backend": "^1.32.2",
@@ -53,10 +53,11 @@
     "@types/luxon": "^3.6.2",
     "@types/ms": "^2.1.0",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.2",
+    "@types/react-dom": "^19.1.6",
     "@types/use-sync-external-store": "^1.5.0",
     "@vitejs/plugin-react": "^4.5.1",
     "autoprefixer": "^10.4.21",
+    "browserslist-config-baseline": "^0.4.0",
     "dotenv": "^16.5.0",
     "eslint": "^9.27.0",
     "jiti": "^2.4.2",
