--- a/apps/ethang-astro/package.json
+++ b/apps/ethang-astro/package.json
@@ -1,7 +1,7 @@
 {
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline",
+    "current node"
   ],
   "dependencies": {
     "@astrojs/cloudflare": "^12.5.3",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "@ethang/eslint-config": "^22.8.1",
+    "browserslist-config-baseline": "^0.4.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
