--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -1,7 +1,6 @@
 {
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline"
   ],
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.1",
@@ -55,9 +54,10 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.6",
     "@types/react-big-calendar": "^1.16.2",
-    "@types/react-dom": "^19.1.4",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.1",
     "autoprefixer": "^10.4.21",
+    "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.25.1",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
