--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,8 +1,8 @@
 {
   "author": "Ethan Glover",
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline",
+    "current node"
   ],
   "dependencies": {
     "@angular-eslint/eslint-plugin": "^19.7.1",
@@ -28,7 +28,7 @@
     "eslint-plugin-perfectionist": "^4.14.0",
     "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react-hooks": "^5.2.0-rc.1",
-    "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.43",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.0.44",
     "eslint-plugin-solid": "^0.14.5",
     "eslint-plugin-sonarjs": "3.0.2",
     "eslint-plugin-storybook": "^9.0.4",
@@ -44,6 +44,7 @@
     "@types/eslint-plugin-tailwindcss": "^3.17.0",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.29",
+    "browserslist-config-baseline": "^0.4.0",
     "lodash": "^4.17.21",
     "typescript": "^5.8.3",
     "zod": "^3.25.51"
