--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -1,8 +1,7 @@
 {
   "author": "Ethan Glover",
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline"
   ],
   "dependencies": {
     "immer": "^10.1.1",
@@ -11,6 +10,7 @@
   "description": "Fine grained state management",
   "devDependencies": {
     "@ethang/eslint-config": "^22.8.1",
+    "browserslist-config-baseline": "^0.4.0",
     "@ethang/project-builder": "^3.0.2",
     "@types/lodash": "^4.17.16",
     "eslint": "^9.25.1",
