--- a/packages/toolbelt/package.json
+++ b/packages/toolbelt/package.json
@@ -1,8 +1,7 @@
 {
   "author": "Ethan Glover",
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline"
   ],
   "dependencies": {
     "@total-typescript/ts-reset": "^0.6.1",
@@ -12,6 +11,7 @@
   },
   "devDependencies": {
     "@ethang/eslint-config": "^22.8.1",
+    "browserslist-config-baseline": "^0.4.0",
     "@ethang/project-builder": "^3.0.2",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.15.3",
