--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -1,7 +1,6 @@
 {
   "browserslist": [
-    "defaults and fully supports es6-module",
-    "maintained node versions"
+    "extends browserslist-config-baseline"
   ],
   "dependencies": {
     "@ethang/toolbelt": "^4.4.10",
@@ -34,9 +33,10 @@
     "@types/lodash": "^4.17.16",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.4",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.1",
     "autoprefixer": "^10.4.21",
+    "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
