--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -5,13 +5,13 @@
   ],
   "dependencies": {
     "immer": "^10.1.1",
-    "lodash": "^4.17.21"
+    "use-sync-external-store": "^1.5.0"
   },
   "description": "Fine grained state management",
   "devDependencies": {
     "@ethang/eslint-config": "^22.9.3",
     "@ethang/project-builder": "^3.0.2",
-    "@types/lodash": "^4.17.16",
+    "@types/use-sync-external-store": "^1.5.0",
     "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.25.1",
     "vitest": "^3.2.2"
@@ -28,5 +28,5 @@
     "test": "vitest run"
   },
   "type": "module",
-  "version": "1.3.0"
+  "version": "2.0.0"
 }
