--- a/apps/react-performance/package.json
+++ b/apps/react-performance/package.json
@@ -11,21 +11,21 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.5.0",
-    "@ethang/eslint-config": "^22.9.4",
+    "@ethang/eslint-config": "^22.9.5",
     "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/lodash": "^4.17.17",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.7",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.21",
     "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.28.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.33.1",
+    "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
     "wrangler": "^4.19.1"
   },
@@ -39,7 +39,7 @@
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
-    "lint": "eslint . --fix",
+    "lint": "eslint src --fix && eslint worker --fix",
     "preview": "pnpm run build && vite preview"
   },
   "type": "module",
