--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -4,10 +4,14 @@
     "current node"
   ],
   "dependencies": {
+    "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.2.6",
     "@ethang/toolbelt": "^4.4.10",
     "@heroui/react": "2.7.10",
     "@heroui/theme": "2.4.17",
+    "@prisma/adapter-d1": "^6.9.0",
+    "@prisma/client": "^6.9.0",
+    "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-router": "^1.121.2",
     "@tanstack/react-router-devtools": "^1.121.8",
     "framer-motion": "^12.18.1",
@@ -17,7 +21,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-lite-youtube-embed": "^2.5.1",
-    "tailwind-merge": "^2.6.0"
+    "tailwind-merge": "^2.6.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.6.0",
@@ -33,6 +39,7 @@
     "eslint": "^9.28.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
+    "prisma": "^6.9.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
