--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -4,6 +4,7 @@
     "current node"
   ],
   "dependencies": {
+    "@anatine/zod-mock": "^3.14.0",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.2.6",
     "@ethang/toolbelt": "^4.4.10",
@@ -11,10 +12,13 @@
     "@heroui/theme": "2.4.17",
     "@prisma/adapter-d1": "^6.9.0",
     "@prisma/client": "^6.9.0",
+    "@tanstack/query-async-storage-persister": "^5.80.7",
     "@tanstack/react-query": "^5.80.7",
+    "@tanstack/react-query-persist-client": "^5.80.7",
     "@tanstack/react-router": "^1.121.2",
     "@tanstack/react-router-devtools": "^1.121.8",
     "framer-motion": "^12.18.1",
+    "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.515.0",
     "luxon": "^3.6.1",
@@ -45,6 +49,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.0",
     "wrangler": "^4.20.0"
   },
   "engines": {
