--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -15,8 +15,8 @@
     "@tanstack/query-async-storage-persister": "^5.80.7",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-persist-client": "^5.80.7",
-    "@tanstack/react-router": "^1.121.2",
-    "@tanstack/react-router-devtools": "^1.121.8",
+    "@tanstack/react-router": "^1.121.12",
+    "@tanstack/react-router-devtools": "^1.121.12",
     "framer-motion": "^12.18.1",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
@@ -25,14 +25,14 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-lite-youtube-embed": "^2.5.1",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "<3",
     "uuid": "^11.1.0",
     "zod": "^3.25.64"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.6.0",
-    "@ethang/eslint-config": "^22.9.10",
-    "@tanstack/router-plugin": "^1.121.9",
+    "@ethang/eslint-config": "^22.10.0",
+    "@tanstack/router-plugin": "^1.121.12",
     "@types/lodash": "^4.17.17",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
@@ -40,12 +40,12 @@
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "browserslist-config-baseline": "^0.4.0",
-    "eslint": "^9.28.0",
+    "eslint": "^9.29.0",
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
     "prisma": "^6.9.0",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
