--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-lite-youtube-embed": "^2.5.1",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "<3",
     "uuid": "^11.1.0",
     "zod": "^3.25.64"
@@ -37,6 +38,7 @@
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "browserslist-config-baseline": "^0.4.0",
