--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -15,12 +15,12 @@
     "@tanstack/query-async-storage-persister": "^5.80.7",
     "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-query-persist-client": "^5.80.7",
-    "@tanstack/react-router": "^1.121.16",
-    "@tanstack/react-router-devtools": "^1.121.16",
+    "@tanstack/react-router": "^1.121.21",
+    "@tanstack/react-router-devtools": "^1.121.21",
     "framer-motion": "^12.18.1",
     "idb-keyval": "^6.2.2",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.515.0",
+    "lucide-react": "^0.516.0",
     "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -28,12 +28,12 @@
     "react-syntax-highlighter": "^15.6.1",
     "tailwind-merge": "<3",
     "uuid": "^11.1.0",
-    "zod": "^3.25.64"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.6.0",
-    "@ethang/eslint-config": "^22.10.2",
-    "@tanstack/router-plugin": "^1.121.16",
+    "@ethang/eslint-config": "^22.11.0",
+    "@tanstack/router-plugin": "^1.121.21",
     "@types/lodash": "^4.17.17",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
@@ -44,12 +44,12 @@
     "browserslist-config-baseline": "^0.4.0",
     "eslint": "^9.29.0",
     "globals": "^16.0.0",
-    "postcss": "^8.5.5",
+    "postcss": "^8.5.6",
     "prisma": "^6.9.0",
     "rimraf": "^6.0.1",
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.0",
+    "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0",
     "wrangler": "^4.20.0"
@@ -65,7 +65,8 @@
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint . --fix",
-    "preview": "pnpm run build && vite preview"
+    "preview": "pnpm run build && vite preview",
+    "prisma-gen": "prisma generate"
   },
   "type": "module",
   "version": "0.0.0"
