--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -1,28 +1,28 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "assets": {
-    "not_found_handling": "single-page-application"
+    "not_found_handling": "single-page-application",
   },
-  "compatibility_date": "2025-06-16",
+  "compatibility_date": "2025-06-17",
   "d1_databases": [
     {
       "binding": "DB",
       "database_id": "c1423f5b-3a72-44f5-9cb4-d14b6f48f111",
-      "database_name": "ethang"
-    }
+      "database_name": "ethang",
+    },
   ],
   "main": "worker/index.ts",
   "name": "ethang",
   "observability": {
-    "enabled": true
+    "enabled": true,
   },
   "placement": {
-    "mode": "smart"
+    "mode": "smart",
   },
   "routes": [
     {
       "custom_domain": true,
-      "pattern": "ethang.dev"
-    }
-  ]
+      "pattern": "ethang.dev",
+    },
+  ],
 }
