--- a/apps/sterett-admin/tsconfig.json
+++ b/apps/sterett-admin/tsconfig.json
@@ -1,5 +1,3 @@
 {
-  "extends": [
-    "../../packages/tsconfig/tsconfig.react.json"
-  ]
+  "extends": ["../../packages/tsconfig/tsconfig.react.json"]
 }
