--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -4,12 +4,10 @@
     "current node"
   ],
   "dependencies": {
-    "@clerk/backend": "^2.2.0",
-    "@clerk/clerk-react": "^5.32.1",
     "@cortex-js/compute-engine": "^0.29.1",
     "@ethang/hooks": "^2.3.1",
     "@ethang/schemas": "workspace:*",
-    "@ethang/store": "^2.2.6",
+    "@ethang/store": "^2.3.1",
     "@ethang/toolbelt": "^4.4.10",
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
@@ -27,6 +25,8 @@
     "framer-motion": "^12.19.1",
     "idb-keyval": "^6.2.2",
     "immer": "^10.1.1",
+    "jose": "^6.0.11",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.523.0",
@@ -49,6 +49,7 @@
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@tanstack/router-plugin": "^1.121.34",
     "@total-typescript/ts-reset": "^0.6.1",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.18",
     "@types/luxon": "^3.6.2",
     "@types/ms": "^2.1.0",
