fix: clean up generated Prisma files before regeneration and update related import paths
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -66,7 +66,7 @@
     "dev": "vite",
     "lint": "eslint . --fix",
     "preview": "pnpm run build && vite preview",
-    "prisma-gen": "prisma generate"
+    "prisma-gen": "rimraf generated/prisma && prisma generate"
   },
   "type": "module",
   "version": "0.0.0"
