--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -68,7 +68,7 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.2.4",
     "wrangler": "^4.21.2"
