--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -65,7 +65,7 @@
     "tailwindcss": "<4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "vite-plugin-pwa": "^1.0.0"
   },
   "engines": {
