--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     ],
     "overrides": {
       "tailwind-merge": "<3",
-      "tailwindcss": "<4"
+      "tailwindcss": "<4",
+      "vite": "<7"
     }
   },
   "scripts": {
