--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -44,7 +44,7 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "^7.0.0",
+    "vite": "<7",
     "wrangler": "^4.21.2"
   },
   "name": "react-vite",
