--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -44,13 +44,13 @@
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
     "@eslint/js": "^9.29.0",
-    "@ethang/eslint-config": "^22.13.3",
+    "@ethang/eslint-config": "^22.13.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/router-plugin": "^1.121.34",
+    "@tanstack/router-plugin": "^1.121.37",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/js-cookie": "^3.0.6",
-    "@types/lodash": "^4.17.18",
+    "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
     "@types/ms": "^2.1.0",
     "@types/react": "^19.1.8",
@@ -68,10 +68,10 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "<7",
+    "vite": "^7.0.0",
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.2.4",
-    "wrangler": "^4.21.2"
+    "wrangler": "^4.22.0"
   },
   "engines": {
     "node": ">=22"
