--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -32,9 +32,9 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
-    "@ethang/eslint-config": "^22.13.3",
-    "@tanstack/router-plugin": "^1.121.34",
-    "@types/lodash": "^4.17.18",
+    "@ethang/eslint-config": "^22.13.4",
+    "@tanstack/router-plugin": "^1.121.37",
+    "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -50,9 +50,9 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "<7",
+    "vite": "^7.0.0",
     "vite-plugin-pwa": "^1.0.0",
-    "wrangler": "^4.21.2"
+    "wrangler": "^4.22.0"
   },
   "engines": {
     "node": ">=22"
