--- a/apps/sterett-react/package.json
+++ b/apps/sterett-react/package.json
@@ -43,13 +43,13 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.13.3",
+    "@ethang/eslint-config": "^22.13.4",
     "@portabletext/types": "^2.0.13",
     "@react-types/shared": "^3.30.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/strictest": "^2.0.5",
     "@tsconfig/vite-react": "^6.3.6",
-    "@types/lodash": "^4.17.18",
+    "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
     "@types/node": "^24.0.4",
     "@types/react": "^19.1.8",
@@ -65,7 +65,7 @@
     "tailwindcss": "<4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "<7",
+    "vite": "^7.0.0",
     "vite-plugin-pwa": "^1.0.0"
   },
   "engines": {
