--- a/templates/react-vite/package.json
+++ b/templates/react-vite/package.json
@@ -27,10 +27,10 @@
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.7.5",
-    "@ethang/eslint-config": "^22.13.3",
-    "@tanstack/router-plugin": "^1.121.34",
+    "@ethang/eslint-config": "^22.13.4",
+    "@tanstack/router-plugin": "^1.121.37",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/lodash": "^4.17.18",
+    "@types/lodash": "^4.17.19",
     "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -44,8 +44,8 @@
     "tailwindcss": "<4",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.0",
-    "vite": "<7",
-    "wrangler": "^4.21.2"
+    "vite": "^7.0.0",
+    "wrangler": "^4.22.0"
   },
   "name": "react-vite",
   "private": true,
