fix: clean up generated Prisma files before regeneration and adjust import paths
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -85,7 +85,7 @@
     "dev": "vite",
     "lint": "eslint src --fix && eslint worker --fix",
     "preview": "pnpm run build && vite preview",
-    "prisma-gen": "prisma generate",
+    "prisma-gen": "rimraf generated/prisma && prisma generate",
     "test": "vitest run"
   },
   "type": "module",
