--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -1,6 +1,8 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "assets": {
+    "binding": "ASSETS",
+    "directory": "./public",
     "not_found_handling": "single-page-application"
   },
   "compatibility_date": "2025-07-06",
