--- a/apps/network-combine/src-tauri/Cargo.toml
+++ b/apps/network-combine/src-tauri/Cargo.toml
@@ -22,4 +22,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+network-interface = "1.0.1"
+wifiscanner = "0.5.1"
