--- a/apps/network-combine/src-tauri/Cargo.toml
+++ b/apps/network-combine/src-tauri/Cargo.toml
@@ -24,3 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 network-interface = "1.0.1"
 wifiscanner = "0.5.1"
+windows = {version = "0.61.3", features = ["Win32_Foundation", "Win32_NetworkManagement_WiFi"] }
+scopeguard = "1.2.0"
