add favorites feature to manage WiFi networks and update UI interaction
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/network-combine/package.json
+++ b/apps/network-combine/package.json
@@ -4,6 +4,7 @@
     "current node"
   ],
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
     "@tanstack/react-query": "^5.82.0",
