--- a/apps/network-manager/package.json
+++ b/apps/network-manager/package.json
@@ -6,31 +6,31 @@
   "dependencies": {
     "@heroui/react": "2.7.11",
     "@heroui/theme": "2.4.17",
-    "@tanstack/react-query": "^5.82.0",
+    "@tanstack/react-query": "^5.83.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
     "framer-motion": "^12.23.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.6.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "<3"
   },
   "devDependencies": {
-    "@ethang/eslint-config": "^22.14.0",
+    "@ethang/eslint-config": "^22.15.0",
     "@tauri-apps/cli": "^2",
     "@types/lodash": "^4.17.20",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "browserslist-config-baseline": "^0.4.0",
-    "eslint": "^9.30.1",
+    "eslint": "^9.31.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
+    "tailwindcss": "<4",
+    "typescript": "~5.8.3",
     "typescript-eslint": "^8.36.0",
-    "vite": "^6.0.3"
+    "vite": "^7.0.4"
   },
   "engines": {
     "node": ">=22"
