chore: restrict Rollup version to <4.45.0 and regenerate pnpm lockfile
Signed-off-by: ethang <hello@ethang.email>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "overrides": {
       "tailwind-merge": "<3",
       "tailwindcss": "<4",
-      "rollup": "4.44.0"
+      "rollup": "<4.45.0"
     }
   },
   "scripts": {
