--- a/apps/kill-tony/package.json
+++ b/apps/kill-tony/package.json
@@ -4,14 +4,21 @@
     "current node"
   ],
   "dependencies": {
+    "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.1",
     "@heroui/theme": "2.4.19",
+    "@hono/zod-validator": "^0.7.1",
+    "@prisma/adapter-d1": "^6.12.0",
     "@tanstack/react-router": "^1.127.9",
     "@tanstack/react-router-devtools": "^1.127.9",
     "framer-motion": "^12.23.6",
+    "hono": "^4.8.5",
     "lodash": "^4.17.21",
+    "prisma": "^6.12.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "uuid": "^11.1.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.9.4",
