--- a/apps/dashboard/wrangler.jsonc
+++ b/apps/dashboard/wrangler.jsonc
@@ -1,9 +1,11 @@
 {
   "$schema": "node_modules/wrangler/config-schema.json",
   "assets": {
-    "not_found_handling": "single-page-application"
+    "not_found_handling": "single-page-application",
+    "run_worker_first": ["/api/*", "/graphql", "/graphql/*"]
   },
   "compatibility_date": "2025-08-02",
+  "compatibility_flags": ["nodejs_compat"],
   "d1_databases": [
     {
       "binding": "DB",
