chore: update compatibility dates, TypeScript configurations, and Apollo client error handling
- Bumped `compatibility_date` across multiple apps to `2025-08-03`.
- Adjusted TypeScript configurations to include `exactOptionalPropertyTypes` and exclude `./generated/**/*`.
- Updated Apollo client error handling to log out on "Unauthorized" errors and removed deprecated utility.
- Minor tweaks to other configurations (`@ts-expect-error` annotations, worker types, and lodash setup).

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/dashboard/tsconfig.json
+++ b/apps/dashboard/tsconfig.json
@@ -1,10 +1,12 @@
 {
 	"compilerOptions": {
+		"exactOptionalPropertyTypes": false,
 		"types": [
 			"./worker-configuration.d.ts"
-		]
+		],
 	},
 	"extends": [
 		"../../packages/tsconfig/tsconfig.react.json"
 	],
+	"exclude": ["./generated/**/*"]
 }
