chore: add `--concurrency=auto` flag to ESLint scripts across projects
- Updated all `lint` scripts in `package.json` files across apps and packages to include the `--concurrency=auto` flag for improved performance.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -32,7 +32,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
     "deploy": "pnpm prisma-gen && pnpm run cf-typegen && wrangler deploy --minify",
     "dev": "wrangler dev",
-    "lint": "eslint . --fix",
+    "lint": "eslint . --fix --concurrency=auto",
     "prisma-gen": "rimraf generated/prisma && prisma generate"
   },
   "type": "module"
