--- a/packages/fetch/package.json
+++ b/packages/fetch/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "build": "bun build.ts",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix --concurrency=auto"
   },
   "type": "module",
   "version": "1.0.2"
