--- a/packages/markdown-generator/package.json
+++ b/packages/markdown-generator/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "build": "bun build.ts",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix --concurrency=auto"
   },
   "type": "module",
   "version": "1.1.5"
