--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -20,7 +20,7 @@
   "main": "index.js",
   "name": "scripts",
   "scripts": {
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix --concurrency=auto"
   },
   "type": "module",
   "version": "1.0.0"
