chore: replace `ProjectStore` with Apollo GraphQL queries and remove redundant dependencies
- Deleted `ProjectStore` and related dependencies, including `@tanstack/react-query` and associated usage.
- Migrated project fetching to Apollo GraphQL using `getProject` and `getProjectIds` queries.
- Updated all components (`ProjectSummary`, `ProjectCard`, and `projects.tsx`) to use Apollo and new query schemas.
- Simplified resolver logic for projects and added support for filtering, ordering, and pagination in GraphQL queries.
- Enhanced type definitions and test coverage for project resolvers, ensuring alignment with updated data logic.

Signed-off-by: ethang <hello@ethang.email>

--- a/packages/tsconfig/tsconfig.react.json
+++ b/packages/tsconfig/tsconfig.react.json
@@ -1,3 +1,6 @@
 {
+  "compilerOptions": {
+    "lib": ["ESNext", "DOM", "DOM.Iterable"]
+  },
   "extends": ["./tsconfig.base.json", "@tsconfig/vite-react/tsconfig.json"]
 }
