chore: remove redundant query files and update GraphQL integration
- Deleted obsolete query files (`courses.ts`, `get-all-news.ts`, `get-all-projects.ts`, `temporary.ts`) in favor of resolver-based queries.
- Updated `courses-resolvers.ts` to utilize `prismaSelect` for optimizing `Course` queries with GraphQLResolveInfo.
- Simplified GraphQL type definitions by refining course and project schema (`type-definitions.ts`).
- Adjusted `pnpm-lock.yaml` to reflect the removal of dependencies and updated package versions.
- Fixed `ProjectSummary`, `projects.tsx`, and GraphQL fragments to conform to updated resolver structure.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -13,6 +13,7 @@
     "@ethang/toolbelt": "^4.4.11",
     "@heroui/react": "2.8.7",
     "@heroui/theme": "2.4.25",
+    "@paljs/plugins": "^8.2.1",
     "@prisma/adapter-d1": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@tanstack/react-router": "^1.145.7",
