chore: add Apollo response caching and update GraphQL type definitions
- Integrated Apollo Server response caching with `@apollo/server-plugin-response-cache`.
- Updated GraphQL type definitions (`type-definitions.ts`) with `@cacheControl` directives for caching support.
- Enhanced resolvers (`courses`, `paths`, `knowledgeAreas`, and `projects`) to leverage `GraphQLResolveInfo` and simplified queries using `prismaSelect`.
- Updated `pnpm-lock.yaml` and `package.json` with relevant dependencies.
- Added caching tests for Apollo Server and a visual caching architecture diagram (`caching-architecture.puml`).
- Enabled `useGETForQueries` in Apollo Client configuration.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -7,6 +7,7 @@
     "@anatine/zod-mock": "^3.14.0",
     "@apollo/client": "^4.0.11",
     "@apollo/server": "^5.2.0",
+    "@apollo/server-plugin-response-cache": "^5.0.0",
     "@as-integrations/cloudflare-workers": "^1.1.1",
     "@ethang/schemas": "workspace:*",
     "@ethang/store": "^2.3.2",
