feat: enhance `__root` route with SEO improvements and update dependencies
- Added `HeadContent` to `__root.tsx` for better SEO, including meta description, title, and Open Graph image integration.
- Updated `pnpm-lock.yaml` to downgrade and replace specific dependencies (e.g., `sanity`, `@portabletext/editor`, `rollup`) for compatibility and stability.
- Removed redundant and unused packages (`@mswjs/interceptors`, `@open-draft/logger`, etc.) to declutter dependencies.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang/wrangler.jsonc
+++ b/apps/ethang/wrangler.jsonc
@@ -4,7 +4,7 @@
     "binding": "ASSETS",
     "directory": "./public",
     "not_found_handling": "single-page-application",
-    "run_worker_first": ["/api/*", "/blog/*", "/graphql"]
+    "run_worker_first": ["/graphql"]
   },
   "compatibility_flags": ["nodejs_compat"],
   "compatibility_date": "2026-01-14",
