feat(apps/ethang): remove unused migrations, components, tests, and Storybook setup
- Deleted unused SQL migrations from the `migrations` directory, including project, tech, and course-related tables.
- Removed deprecated components, resolvers, and accompanying tests related to courses, paths, and projects.
- Eliminated GraphQL client configuration, unused mutations, and Apollo-related code from the `graphql` directory.
- Removed Storybook setup files (`main.ts`, `preview.ts`) and associated stories for outdated components.
- Cleaned up Prisma-related utilities and mocks in `prisma-client.ts`.
- Streamlined the repository by decluttering unused and outdated code, reducing complexity and bundle size.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang/package.json
+++ b/apps/ethang/package.json
@@ -17,6 +17,8 @@
     "@paljs/plugins": "^8.2.1",
     "@prisma/adapter-d1": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "@sanity/client": "^7.14.1",
+    "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-router": "^1.157.15",
     "@tanstack/react-router-devtools": "^1.157.15",
     "framer-motion": "^12.29.2",
@@ -35,16 +37,10 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^5.0.0",
     "@cloudflare/vite-plugin": "^1.21.2",
     "@cloudflare/workers-types": "^4.20260124.0",
     "@dotenvx/dotenvx": "^1.52.0",
     "@ethang/eslint-config": "^24.5.0",
-    "@storybook/addon-a11y": "^10.2.0",
-    "@storybook/addon-docs": "^10.2.0",
-    "@storybook/addon-vitest": "^10.2.0",
-    "@storybook/react-vite": "^10.2.0",
-    "@storybook/test": "^8.6.15",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/router-plugin": "^1.157.15",
@@ -58,12 +54,10 @@
     "@vitest/coverage-v8": "^4.0.18",
     "browserslist-config-baseline": "^0.5.0",
     "eslint": "^9.39.2",
-    "eslint-plugin-storybook": "^10.2.0",
     "globals": "^17.1.0",
     "playwright": "^1.58.0",
     "prisma": "^7.3.0",
     "rimraf": "^6.1.2",
-    "storybook": "^10.2.0",
     "tailwindcss": "^4.1.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.53.1",
@@ -79,14 +73,12 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist && tsc -b && vite build",
-    "build-storybook": "storybook build",
     "cf-typegen": "wrangler types",
     "deploy": "pnpm run build && wrangler deploy",
     "dev": "vite",
     "lint": "eslint . --fix --concurrency=auto",
     "preview": "pnpm run build && vite preview",
     "prisma-gen": "rimraf generated/prisma && prisma generate",
-    "storybook": "storybook dev -p 6006",
     "test": "pnpx playwright install && vitest --watch=false"
   },
   "type": "module",
