feat: upgrade dependencies and regenerate worker configurations
- Updated dependencies across projects, including `@ethang/eslint-config` (v24.8.2), `wrangler` (v4.66.0), `framer-motion` (v12.34.1), `@sanity/vision` (v5.10.0), and others for compatibility and functionality enhancements.
- Updated compatibility dates in `wrangler.jsonc` to `2026-02-17` for multiple apps.
- Regenerated `worker-configuration.d.ts` files with `workerd@1.20260217.0` for updated runtime types.
- Synchronized changes in `pnpm-lock.yaml` to reflect dependency updates.

Signed-off-by: ethang <hello@ethang.email>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ethan Glover",
   "devDependencies": {
-    "@ethang/eslint-config": "^24.8.1",
+    "@ethang/eslint-config": "^24.8.2",
     "@types/node": "^25.2.3",
     "bun": "^1.3.9",
     "eslint": "^9.39.2",
@@ -27,6 +27,7 @@
       "msw",
       "prisma",
       "sharp",
+      "unrs-resolver",
       "workerd"
     ]
   },
