chore(eslint-config): remove eslint configuration file
- Deleted `eslint.config.js` and associated configuration, rules, and plugins to clean up unused files and streamline the project structure.

Signed-off-by: ethang <hello@ethang.email>

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -56,7 +56,7 @@
     "node": ">=24"
   },
   "license": "ISC",
-  "main": "eslint.config.js",
+  "main": "config.main.js",
   "name": "@ethang/eslint-config",
   "repository": {
     "url": "git+https://github.com/eglove/ethang-monorepo.git#master"
