feat(eslint-config): integrate `@eslint/compat` for plugin compatibility
- Added `@eslint/compat` to enhance compatibility when configuring plugins, such as `eslint-plugin-lodash`.
- Updated `config.main.js` and `rule-list.ts` to utilize `fixupPluginRules` for better plugin rule handling.
- Improved import management in `create-config-file.ts` by introducing `lodash/uniq` and refining import list processing.
- Synchronized `pnpm-lock.yaml` and `package.json` to reflect the added dependency.

Signed-off-by: ethang <hello@ethang.email>

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -10,6 +10,7 @@
     "@angular-eslint/template-parser": "^21.2.0",
     "@cspell/eslint-plugin": "^9.6.4",
     "@eslint-react/eslint-plugin": "^2.13.0",
+    "@eslint/compat": "^2.0.2",
     "@eslint/css": "0.14.1",
     "@eslint/js": "^9.39.2",
     "@eslint/json": "^1.0.1",
