feat: refactor components and improve store setup
- Migrated global and course path data logic to new store-based architecture (`global-store-properties` and `course-path-store`).
- Simplified component props to leverage centralized store management (`GlobalStore`).
- Refactored multiple components (`Home`, `Courses`, `Navigation`) to reduce dependency on redundant props.
- Adjusted style classes for consistency across components (`accordion`, `navigation`, `course-item`, etc.).
- Updated file references and paths for stores and client logic (`sanity.ts` -> `clients/sanity.ts`, etc.).
- Expanded `globalStore` with a `setup` method to streamline context initialization.
- Synchronized updated configurations across `tsconfig.json`, `eslint.config.ts`, and `package.json`.
- Improved `wrangler.jsonc` formatting for better readability.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-hono/package.json
+++ b/apps/ethang-hono/package.json
@@ -36,8 +36,8 @@
     "deploy": "wrangler deploy --minify",
     "dev": "run-p tailwind wrangler:dev",
     "lint": "eslint . --fix",
-    "wrangler:dev": "wrangler dev",
-    "tailwind": "tailwindcss -i ./src/index.css -o ./public/index.css --watch"
+    "tailwind": "tailwindcss -i ./src/index.css -o ./public/index.css --watch",
+    "wrangler:dev": "wrangler dev"
   },
   "type": "module"
 }
