--- a/apps/ethang-hono/tsconfig.json
+++ b/apps/ethang-hono/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "types": [
-      "./worker-configuration.d.ts",
-      "node"
-    ]
+    "types": ["./worker-configuration.d.ts", "node"]
   },
   "extends": "../../packages/tsconfig/tsconfig.base.json"
 }
