chore(deps): upgrade dependencies and regenerate worker configurations
- Bumped `@ethang/eslint-config` to `v25.1.2` across multiple packages for improved linting capabilities.
- Upgraded `@tanstack/react-router` and `@tanstack/react-router-devtools` to `v1.163.2` for enhanced routing support.
- Updated `@cloudflare/workers-types` to `v4.20260304.0` for better type bindings.
- Regenerated `worker-configuration.d.ts` files with `workerd@1.20260302.0` (compatibility date `2026-02-25`).
- Synchronized changes in `pnpm-lock.yaml` to reflect updated dependencies.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-hono/wrangler.jsonc
+++ b/apps/ethang-hono/wrangler.jsonc
@@ -2,16 +2,16 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "assets": {
     "binding": "ASSETS",
-    "directory": "./public",
+    "directory": "./public"
   },
-  "compatibility_date": "2025-09-27",
+  "compatibility_date": "2026-02-25",
   "compatibility_flags": ["nodejs_compat"],
   "main": "src/index.tsx",
   "name": "ethang-hono",
   "observability": {
-    "enabled": true,
+    "enabled": true
   },
   "placement": {
-    "mode": "smart",
-  },
+    "mode": "smart"
+  }
 }
